--- a/cap5/index.html
+++ b/cap5/index.html
@@ -35,7 +35,7 @@
 			placeholder="This will be enabled once the data channel is up..."></textarea>
 			</td>
 			<td align="center">
-				<textarea rows="4" cols="60" id="dataChannelReceive" disabled></textarea>
+				<div id="dataChannelReceive"></div>
 			</td>
 		</tr>
 		<tr>
